[project]
name = "pygentic-ai"
version = "0.1.0"
description = "Agentic Workflow Metaframework"
readme = "README.md"
authors = [
    { name = "Sebastian Kalisz", email = "23085519+KaliszS@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
